# depx

./: .gitignore  README.md  README_zh.md  build.ps1  go.mod  install.ps1  main.go
cmd/: config.go  efficiency.go  monorepo.go  root.go  root_test.go  scan.go  scan_test.go  surface.go  surface_test.go
internal/analyzer/: monorepo.go  monorepo_test.go  unused.go  unused_test.go
internal/config/: config.go  config_test.go
internal/efficiency/: efficiency.go  efficiency_test.go  go_export.go  js_export.go
internal/filter/: file.go  file_test.go
internal/lockfile/: lockfile.go  lockfile_test.go
internal/manifest/: cargo.go  cargo_test.go  deps.go  deps_test.go  gomod.go  manifest.go  manifest_test.go  npm.go  pip.go  pip_test.go
internal/report/: terminal.go  terminal_test.go
internal/surface/: surface.go  surface_test.go
internal/usage/: boundary_test.go  golang.go  golang_test.go  js.go  js_test.go  python.go  python_test.go  rust.go  rust_test.go  usage.go
testdata/complex-cargo-workspaces/: Cargo.toml
testdata/complex-mixed/: Cargo.toml  go.mod  index.js  lib.rs  main.go  main.py  package.json  requirements.txt
testdata/complex-npm-workspaces/: package.json
testdata/config-ignore-test/: .depx.yml  index.js  package.json
testdata/config-project/: .depx.yml  index.js  package.json
testdata/dev-deps-surface/: index.js  package.json  utils.js
testdata/edge-all-used/: index.js  package.json
testdata/edge-empty/: index.js  (+1 more)
testdata/rust-complex/: Cargo.toml
testdata/rust-complex/src/: handlers.rs  main.rs
tests/: integration_test.go
(+57 files in other folders)
